repaired overflow-x on the webpage + resized the mrbeast big blue text

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ html {
   /* set overall font */
   font-size: 1.3rem;
   font-family: "Inter";
+  overflow-x: hidden;
 }
 
 *,
@@ -30,6 +31,7 @@ body {
   margin: 0;
   padding: 0;
   background-color:#FFFFFF;
+  overflow-x: hidden;
 }
 
 li {
